--- a/package.json
+++ b/package.json
@@ -34,5 +34,16 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "autoprefixer": "^10.4.2",
+    "framer-motion": "^6.2.3",
+    "hamburger-react": "^2.4.1",
+    "postcss": "^8.4.5",
+    "react-headroom": "^3.2.0",
+    "react-icons": "^4.3.1",
+    "styled-components": "^5.3.3",
+    "tailwindcss": "^3.0.18",
+    "use-onclickoutside": "^0.4.0"
   }
 }
